--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
     <div class="main">
       <div class="text-container">
         <div class="products">
-          <h1>10,000+ of our <br>users love our<br> products.</h1>
-          <p>We only provide great products combined with excellent<br> customer service.
-            See what our satisfied customers are<br> saying about our services.</p>
+          <h1>10,000+ of our users love our products.</h1>
+          <p>We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.</p>
         </div>
         <!-- RATES -->
         <div class="rates">
 
           <div class="rate-1">
             <div class="stars">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
             </div>
             
             <p>Rated 5 Stars in Reviews</p>
@@ -59,22 +59,22 @@
 
           <div class="rate-2">
             <div class="stars">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
             </div>
             <p>Rated 5 Stars in Report Guru</p>
           </div>
 
           <div class="rate-3">
             <div class="stars">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
-              <img src="./images/icon-star.svg" alt="étoiles">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="">
             </div>
             <p>Rated 5 Stars in BestTech</p>
           </div>
@@ -89,7 +89,7 @@
         <div class="card card-1">
           <div class="title">
           <img src="./images/image-colton.jpg" alt="">
-          <h3 class="name">Colton Smith <br><span class="verified">Verified Buyer</span></h3>
+          <h2 class="name">Colton Smith <br><span class="verified">Verified Buyer</span></h2>
           </div>
           <p>"We needed the same printed design as the one we had ordered a week prior.
             Not only did they find the original order, but we also received it in time.
@@ -99,7 +99,7 @@
         <div class="card card-2">
           <div class="title">
             <img src="./images/image-irene.jpg" alt="">
-            <h3 class="name">Irene Roberts<br><span class="verified">Verified Buyer</span></h3>
+            <h2 class="name">Irene Roberts<br><span class="verified">Verified Buyer</span></h2>
           </div>
           <p>"Customer service is always excellent andvery quick turn around. Completely
             delighted with the simplicity of the purchase and the speed of delivery."</p>
@@ -109,7 +109,7 @@
         <div class="card card-3">
           <div class="title">
             <img src="./images/image-anne.jpg" alt="">
-            <h3 class="name">Anne Wallace<br><span class="verified">Verified Buyer</span></h3>
+            <h2 class="name">Anne Wallace<br><span class="verified">Verified Buyer</span></h2>
           </div>
           <p>"Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!"</p>
